--- a/MoviePick.MobileUI/MoviePick.MobileUI/Views/MainPage.xaml
+++ b/MoviePick.MobileUI/MoviePick.MobileUI/Views/MainPage.xaml
@@ -19,7 +19,7 @@
                 </OnPlatform>
             </NavigationPage.Icon>
             <x:Arguments>
-                <views:ItemsPage />
+                <views:MTVSListPage />
             </x:Arguments>
         </NavigationPage>
     </MasterDetailPage.Detail>
