--- a/MoviePick.MobileUI/MoviePick.MobileUI/Views/PersonDetailsPage.xaml
+++ b/MoviePick.MobileUI/MoviePick.MobileUI/Views/PersonDetailsPage.xaml
@@ -111,7 +111,7 @@
                                 <StackLayout>
                                     <Image WidthRequest="80" HeightRequest="80" Source="{Binding MovieAndTvshow.Poster, Converter={StaticResource imgConv}}"></Image>
                                 </StackLayout>
-                                <StackLayout Orientation="Vertical">
+                                <StackLayout Orientation="Vertical" Margin="0,10,0,0">
                                     <Label
                                         FontSize="13"
                                         FontAttributes="Bold">
