--- a/MoviePick.MobileUI/MoviePick.MobileUI/Views/NewsDetailsPage.xaml
+++ b/MoviePick.MobileUI/MoviePick.MobileUI/Views/NewsDetailsPage.xaml
@@ -6,6 +6,7 @@
              xmlns:vm="clr-namespace:MoviePick.MobileUI.ViewModels"
              xmlns:converters="clr-namespace:MoviePick.MobileUI.Converters"
              mc:Ignorable="d"
+             Title="News place"
              x:Class="MoviePick.MobileUI.Views.NewsDetailsPage">
     <ContentPage.BindingContext>
         <vm:NewsDetailsViewModel></vm:NewsDetailsViewModel>
