--- a/MoviePick.MobileUI/MoviePick.MobileUI/Views/MTVSListPage.xaml
+++ b/MoviePick.MobileUI/MoviePick.MobileUI/Views/MTVSListPage.xaml
@@ -35,6 +35,7 @@
                                     <Label Text="{Binding CalculatedRating}"
                                     HorizontalTextAlignment="Center"
                                     TextColor="White"
+                                    HorizontalOptions="StartAndExpand"
                                     BackgroundColor="Green"
                                     d:Text="{Binding .}"
                                     LineBreakMode="NoWrap" 
